Moved calendar to availability

--- a/app/components/calendar/calendar.component.html
+++ b/app/components/calendar/calendar.component.html
@@ -1,4 +1,5 @@
-<div [formGroup]="propertyForm" class="calendar-container">
+<!--<div [formGroup]="propertyForm" class="calendar-container">-->
+<div class="calendar-container">
     <div class="row">
         <div class="col-xs-12">
             <div class="form-group form-text">
@@ -8,14 +9,14 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-xs-3">
-            <div class="form-group label-floating" [ngClass]="{'form-error': !propertyForm.controls['MinimumStay'].valid && errorForm}">
-                <label class="control-label">Minimum Days Stay</label>
-                <input type="number" min="0" class="form-control" formControlName="MinimumStay">
-            </div>
-        </div>
-    </div>
+    <!--<div class="row">-->
+        <!--<div class="col-xs-3">-->
+            <!--<div class="form-group label-floating" [ngClass]="{'form-error': !propertyForm.controls['MinimumStay'].valid && errorForm}">-->
+                <!--<label class="control-label">Minimum Days Stay</label>-->
+                <!--<input type="number" min="0" class="form-control" formControlName="MinimumStay">-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
     <div class="c-button-group">
         <a (click)="changeYear(-1)"
