Changed name of 'Service' tab to 'Housekeeping'

--- a/app/pages/properties/editproperty/editproperty.component.html
+++ b/app/pages/properties/editproperty/editproperty.component.html
@@ -63,7 +63,7 @@
                             <li class="nav-pill">
                                 <a href="#metatab-property-2" role="tab" data-toggle="tab" class="">
                                     <i class="material-icons">hotel</i>
-                                    Services
+                                    Housekeeping
                                 </a>
                             </li>
                             <li class="nav-pill">
