--- a/app/components/meta-filter-heading/meta-filter-heading.component.html
+++ b/app/components/meta-filter-heading/meta-filter-heading.component.html
@@ -1,9 +1,6 @@
 <div [formGroup]="propertyForm" *ngIf="name == 'Services'" class="">
     <div class="row">
         <div class="col-xs-12">
-            <h5>Housekeeping</h5>
-        </div>
-        <div class="col-xs-12">
             <div id="childrenAllow" class="radio">
                 <label>
                     <input type="radio" [value]="0" formControlName="Housekeeping"> Not Available
@@ -78,11 +75,11 @@
     </div>
 </div>
 <div [formGroup]="propertyForm" *ngIf="name == 'Features'" class="features">
-    <div class="checkbox">
-        <label>
-            <input type="checkbox" formControlName="LiftAvailable"> Lift Available
-        </label>
-    </div>
+    <!--<div class="checkbox">-->
+        <!--<label>-->
+            <!--<input type="checkbox" formControlName="LiftAvailable"> Lift Available-->
+        <!--</label>-->
+    <!--</div>-->
     <div class="form-group label-floating">
         <label class="control-label">Unique Benefits</label>
         <textarea class="form-control" formControlName="Benefits" (keyup)="autosize($event)" (click)="autosize($event)"></textarea>
