Changed 'Trip' to 'Suitability' with icon replace

--- a/app/pages/properties/editproperty/editproperty.component.html
+++ b/app/pages/properties/editproperty/editproperty.component.html
@@ -68,8 +68,8 @@
                             </li>
                             <li class="nav-pill">
                                 <a href="#metatab-property-1" role="tab" data-toggle="tab" class="">
-                                    <i class="material-icons">flight_takeoff</i>
-                                    Trip
+                                    <i class="material-icons">thumb_up</i>
+                                    Suitability
                                 </a>
                             </li>
                         </ul>
