--- a/app/pages/properties/addproperty/addproperty.component.html
+++ b/app/pages/properties/addproperty/addproperty.component.html
@@ -60,7 +60,7 @@
                             <li class="nav-pill">
                                 <a href="#metatab-property-1" role="tab" data-toggle="tab" class="">
                                     <i class="material-icons">flight_takeoff</i>
-                                    Trip
+                                    Suitability
                                 </a>
                             </li>
                         </ul>
