Add 'Suitability' heading

--- a/app/components/meta-filter-heading/meta-filter-heading.component.html
+++ b/app/components/meta-filter-heading/meta-filter-heading.component.html
@@ -74,6 +74,10 @@
 
     </div>
 </div>
+
+<div [formGroup]="propertyForm" *ngIf="name == 'Trip'" class="">
+    <h5>The property is suitable for...</h5>
+</div>
 <div [formGroup]="propertyForm" *ngIf="name == 'Features'" class="features">
     <!--<div class="checkbox">-->
         <!--<label>-->
