--- a/app/components/meta-filter-heading/meta-filter-heading.component.html
+++ b/app/components/meta-filter-heading/meta-filter-heading.component.html
@@ -76,7 +76,7 @@
 </div>
 
 <div [formGroup]="propertyForm" *ngIf="name == 'Trip'" class="">
-    <h5>The property is suitable for...</h5>
+    <h5 class="font-16">The property is suitable for...</h5>
 </div>
 <div [formGroup]="propertyForm" *ngIf="name == 'Features'" class="features">
     <!--<div class="checkbox">-->
