--- a/app/pages/properties/addproperty/addproperty.component.html
+++ b/app/pages/properties/addproperty/addproperty.component.html
@@ -33,7 +33,7 @@
                                     Marketing
                                 </a>
                             </li>
-                            <li class="nav-pill">
+                            <!--<li class="nav-pill">
                                 <a href="#metatab-property-4" role="tab" data-toggle="tab" class="">
                                     <i class="material-icons">golf_course</i>
                                     Points of Interests
@@ -44,7 +44,7 @@
                                     <i class="material-icons">pin_drop</i>
                                     Local Activities
                                 </a>
-                            </li>
+                            </li>-->
                             <li class="nav-pill">
                                 <a href="#metatab-property-6" role="tab" data-toggle="tab" class="">
                                     <i class="material-icons">stars</i>
