--- a/app/pages/properties/availability/availability.component.css
+++ b/app/pages/properties/availability/availability.component.css
@@ -10,7 +10,7 @@
 
 .panels-wrp .right-panel {
     flex: 1;
-    transition: flex 0.25s ease-out;
+    transition: flex 0.2s ease;
 }
 
 .panels-wrp .right-panel.toggle {
