--- a/app/pages/properties/availability/availability.component.html
+++ b/app/pages/properties/availability/availability.component.html
@@ -35,6 +35,9 @@
                             <calendar-cmp *ngIf="isCalendarView"
                                           [errorForm]="errorForm">
                             </calendar-cmp>
+                            <calendar-list-cmp *ngIf="!isCalendarView"
+                                          [errorForm]="errorForm">
+                            </calendar-list-cmp>
                         </div>
                     </div>
                 </div>
