--- a/app/pages/properties/availability/availability.component.html
+++ b/app/pages/properties/availability/availability.component.html
@@ -38,14 +38,14 @@
                                           [errorForm]="errorForm">
                             </calendar-cmp>
                             <calendar-list-cmp *ngIf="!isCalendarView"
-                                          [errorForm]="errorForm">
+                                               [errorForm]="errorForm">
                             </calendar-list-cmp>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="right-panel" [class.toggle]="UpdateBlock">
+        <div class="right-panel" [class.in]="!UpdateBlock" [class.out]="UpdateBlock">
             <div class="container-fluid">
                 <div class="card">
                     <div class="col-md-12">
