--- a/app/pages/properties/availability/availability.component.html
+++ b/app/pages/properties/availability/availability.component.html
@@ -71,10 +71,30 @@
                                 <div class="col-xs-12">
                                     <singleselect-field-cmp
                                             [dataList]="UpdateTypeList"
-                                            [options]="{title: 'Update type'}"
+                                            [options]="{title: 'Update type', default: 'Internal Booking'}"
                                             [errorForm]="errorForm"
                                             [field]="availabilityForm.controls.UpdateType"></singleselect-field-cmp>
                                 </div>
+                            </div>
+                            <div class="row" *ngIf="availabilityForm.controls.UpdateType.value.Id === 1">Internal</div>
+                            <div class="row" *ngIf="availabilityForm.controls.UpdateType.value.Id !== 1">
+                                <div class="col-xs-12">
+                                    <div class="input-group">
+                                        <span class="input-group-addon"><i class="material-icons">assignment</i></span>
+                                        <div class="form-group label-floating">
+                                            <label class="control-label">Notes</label>
+                                            <textarea [formControl]="availabilityForm.controls.Notes"
+                                                      class="form-control"
+                                                      (keyup)="autosize($event)"
+                                                      (click)="autosize($event)"
+                                            ></textarea>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12">
+                                <button class="btn btn-success pull-right font-16 m-r-10">Save</button>
+                                <button class="btn btn-danger font-16 m-l-10">Cancel</button>
                             </div>
                         </div>
                     </div>
